minio/020-minio-service-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: minio-port
      port: 9001
      protocol: TCP
      targetPort: 9001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      hostname: minio
      containers:
        - name: minio
          image: minio/minio
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 9001
              protocol: TCP
          volumeMounts:
          - name: minio-data
            mountPath: /data
          args: ["server", "/data", "--console-address", ":9001"]
          stdin: true
          tty: true
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data  
      restartPolicy: Always
---
