minio/031-minio-cli-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-cli
  namespace: minio

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio-cli.platform.flexigrobots-h2020.eu`)
      kind: Rule
      services:
        - name: minio-cli
          port: 9000
