minio/035-minio-ingress-https.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-tls
  namespace: minio

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.platform.flexigrobots-h2020.eu`)
      kind: Rule
      services:
        - name: minio
          port: 9001
  tls:
    certResolver: default
